@@ -1,6 +1,8 @@
 package com.c109.chaintoon.domain.user.service;
 
 import com.c109.chaintoon.common.s3.service.S3Service;
+import com.c109.chaintoon.domain.search.code.SearchType;
+import com.c109.chaintoon.domain.search.dto.response.SearchResponseDto;
 import com.c109.chaintoon.domain.user.dto.request.UserRequestDto;
 import com.c109.chaintoon.domain.user.dto.response.FollowingResponseDto;
 import com.c109.chaintoon.domain.user.dto.response.MyInfoResponseDto;
@@ -34,14 +36,18 @@ public class UserService {
 
     // 유저 검색
     @Transactional(readOnly = true)
-    public List<SearchUserResponseDto> searchByNickname(String keyword, int page, int pageSize) {
+    public SearchResponseDto<SearchUserResponseDto> searchByNickname(String keyword, int page, int pageSize) {
         // 페이지네이션 (정렬 기준 없음)
         Pageable pageable = PageRequest.of(page - 1, pageSize);
 
         // 닉네임으로 유저 검색
         Page<User> userPage = userRepository.findByNicknameIgnoreCaseContaining(keyword, pageable);
 
-        return toList(userPage);
+        return SearchResponseDto.<SearchUserResponseDto>builder()
+                .type(SearchType.USER.getValue())
+                .totalCount(userPage.getTotalElements())
+                .searchResult(toList(userPage))
+                .build();
     }
 
     private List<SearchUserResponseDto> toList(Page<User> userPage) {
@@ -50,7 +56,7 @@ public class UserService {
                         .nickname(user.getNickname())
                         .id(user.getId())
                         .profileImage(s3Service.getPresignedUrl(user.getProfileImage()))
-                        .build()).collect(Collectors.toList());
+                        .build()).toList();
     }
 
     // 개인정보 미포함, 현재는 동일
@@ -101,7 +107,7 @@ public class UserService {
 
     // 회원 정보 수정
     @PreAuthorize("hasRole('USER')")
-    public MyInfoResponseDto updateUser(Integer userId, UserRequestDto userRequestDto, MultipartFile profileImage, MultipartFile backgroundImage) {
+    public MyInfoResponseDto updateUser(Integer userId, UserRequestDto userRequestDto, MultipartFile profileImage) {
         // 기존 유저 조회
         User user = userRepository.findById(userId).orElseThrow(() -> new UserIdNotFoundException(userId));
 
@@ -111,14 +117,6 @@ public class UserService {
 
             String profileUrl = uploadProfile(userId, profileImage);
             user.setProfileImage(profileUrl);
-        }
-
-        // 배경 이미지 업데이트
-        if(backgroundImage != null && !backgroundImage.isEmpty()) {
-            s3Service.deleteFile(user.getBackgroundImage());
-
-            String backgroundUrl = uploadBackground(userId, backgroundImage);
-            user.setBackgroundImage(backgroundUrl);
         }
 
         // 회원 정보 업데이트
@@ -133,6 +131,23 @@ public class UserService {
     // 프로필 이미지 업로드
     private String uploadProfile(Integer userId, MultipartFile file){
         return s3Service.uploadFile(file, "user/" + userId + "/profile");
+    }
+
+    @PreAuthorize("hasRole('USER')")
+    public String updateBackgroundImage(Integer userId, MultipartFile backgroundImage) {
+        // 기존 유저 조회
+        User user = userRepository.findById(userId).orElseThrow(() -> new UserIdNotFoundException(userId));
+
+        // 배경 이미지 업데이트
+        if(backgroundImage != null && !backgroundImage.isEmpty()) {
+            s3Service.deleteFile(user.getBackgroundImage());
+
+            String backgroundUrl = uploadBackground(userId, backgroundImage);
+            user.setBackgroundImage(backgroundUrl);
+        }
+
+        userRepository.save(user);
+        return user.getBackgroundImage();
     }
 
     // 배경 이미지 업로드
